--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/devexpress-diagram/dist/dx-diagram.min.css",
+              "node_modules/devextreme/dist/css/dx.light.css",
               "src/styles.scss"
             ],
             "scripts": []
